see more button works properly in samsung internet

--- a/data/style.css
+++ b/data/style.css
@@ -473,3 +473,16 @@ li button {
 #symbolButtons * {
   transition: all 0s !important;
 }
+
+:root {
+  --less: table-cell;
+  --more: none;
+}
+
+#symbolButtons tr > td:nth-child(1), #symbolButtons tr > td:nth-child(2), #symbolButtons tr > td:nth-child(3), #symbolButtons tr > td:nth-child(4), #symbolButtons #more-wrapper {
+  display: var(--less);
+}
+
+#symbolButtons tr > td:nth-child(5), #symbolButtons tr > td:nth-child(6), #symbolButtons tr > td:nth-child(7), #symbolButtons tr > td:nth-child(8), #symbolButtons #less-wrapper {
+  display: var(--more);
+}
